# quant_cnbc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 0001_cnbc_schema.py
app/: __init__.py  config.py  db.py  dependencies.py  main.py
app/models/: __init__.py  domain.py  llm_schemas.py  requests.py  responses.py
app/repository/: __init__.py  distillations.py  entities.py  runs.py  sentiments.py  transcripts.py
app/routes/: __init__.py  entities.py  health.py  transcripts.py
app/services/: __init__.py  archive_client.py  distiller.py  entity_pass.py  http_util.py  ingest_worker.py  jobs.py  llm_client.py  pipeline.py  sentiment_pass.py  transcript_fetcher.py
docs/: SPEC.md
tests/: conftest.py  test_slice0_scaffold.py  test_slice1_persistence.py  test_slice2_fetch.py  test_slice3_distill.py  test_slice4_sentiment.py  test_slice5_entities.py  test_slice6_pipeline.py  test_slice7_api.py
